--- a/dev/templates/lk-dannye.html
+++ b/dev/templates/lk-dannye.html
@@ -181,7 +181,7 @@
                         <div class="c-lk-list__item">
                             <div class="c-checkbox-primary">
                                 <input class="c-checkbox c-checkbox_primary" id="example-checkbox" type="checkbox">
-                                <label class="c-label c-text c-text_md" for="example-checkbox">Получать рассылку</label>
+                                <label class="c-label" for="example-checkbox">Получать рассылку</label>
                             </div>
                         </div>
                     </div>
