--- a/dev/templates/selection-list.html
+++ b/dev/templates/selection-list.html
@@ -359,8 +359,8 @@
                 </ul>
             </div>
             <div class="col-10 mt-2">
-                <div class="c-product-list c-product-list_lg">
-                    <div class="c-product-list__item">
+                <div class="c-product-list c-product-list_lg row">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_lg c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -434,7 +434,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_lg c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -508,7 +508,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_lg c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -582,7 +582,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_lg c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -656,7 +656,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_lg c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -730,7 +730,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_lg c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
