--- a/dev/templates/selection-tile.html
+++ b/dev/templates/selection-tile.html
@@ -361,8 +361,8 @@
 
             </div>
             <div class="col-10 mt-2">
-                <div class="c-product-list c-product-list_md c-product-list_fixed-item">
-                    <div class="c-product-list__item">
+                <div class="c-product-list c-product-list_md c-product-list_fixed-item row">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -432,7 +432,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -502,7 +502,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -572,7 +572,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -642,7 +642,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -712,7 +712,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -782,7 +782,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -852,7 +852,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -922,7 +922,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -992,7 +992,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -1062,7 +1062,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -1132,7 +1132,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -1202,7 +1202,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -1272,7 +1272,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -1342,7 +1342,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
