--- a/dev/scss/layout/_main.scss
+++ b/dev/scss/layout/_main.scss
@@ -26,6 +26,8 @@ body {
 }
 
 .c-checkbox {
+  display: inline-flex;
+
   &_primary {
     .c-checkbox__label:before {
       border-color: $color-primary;
@@ -75,11 +77,11 @@ body {
 .c-icon-list {
   display: inline-flex;
   flex-direction: column;
-  overflow-y: auto;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
+  //overflow-y: auto;
+  //
+  //&::-webkit-scrollbar {
+  //  display: none;
+  //}
 
   &__item {
     width: max-content;
@@ -228,7 +230,13 @@ body {
   border-radius: 6px;
   background-color: $color-lightest;
   position: relative;
-  transition: box-shadow, .2s ease-in;;
+  transition: box-shadow, .2s ease-in;
+
+
+  &_bordered {
+    border: 1px solid $color-lighten;
+    border-radius: 6px;
+  }
 
   &_events {
     &:hover, &:focus {
@@ -251,7 +259,6 @@ body {
   &__preview {
     padding: 10px;
     max-height: 100%;
-    flex-basis: 218px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -269,7 +276,7 @@ body {
 
     .c-product-card__preview {
       margin-bottom: 10px;
-      height: 190px;
+      flex-basis: 190px;
     }
 
     .c-product-desc__item + .c-product-desc__item {
@@ -287,7 +294,7 @@ body {
 
     .c-product-card__preview {
       margin-bottom: 20px;
-      height: 218px;
+      flex-basis: 218px;
     }
 
     .c-product-card__description {
@@ -318,7 +325,7 @@ body {
     }
 
     .c-product-card__preview {
-      height: 156px;
+      flex-basis: 156px;
       margin-bottom: 0;
     }
 
@@ -330,7 +337,22 @@ body {
       width: 630px;
       max-width: 100%;
     }
+
+    &.c-product-card_left-control {
+      .c-product-card__preview {
+        flex-basis: 136px;
+      }
+    }
+    &.c-product-card_card-added {
+      .c-product-card__body {
+        padding-right: 0;
+        display: flex;
+        align-items: center;
+      }
+    }
+
   }
+
 }
 
 .c-product-desc {
@@ -422,15 +444,22 @@ body {
   }
 }
 
+
 .c-product-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -10px;
-  margin-left: -10px;
+  //display: flex;
+  //flex-wrap: wrap;
+  //margin-right: -10px;
+  //margin-left: -10px;
+&_bordered{
+  .c-product-list__item + .c-product-list__item {
+    border-top: 1px solid $color-lighten;
+  }
+}
+
 
   &__item {
-    padding-left: 10px;
-    padding-right: 10px;
+    //padding-left: 10px;
+    //padding-right: 10px;
     margin-bottom: 20px;
     max-width: 100%;
   }
@@ -928,5 +957,93 @@ body {
       border-color: transparent;
     }
 
+  }
+}
+
+
+.c-specifications-section {
+  padding: 30px;
+  border: 1px solid #F2F2F2;
+  border-radius: 6px;
+  background-color: $color-lightest;
+  margin-bottom: 20px;
+
+  &__actions {
+    display: flex;
+    align-items: center;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+
+  &__action {
+    padding-left: 15px;
+    padding-right: 15px;
+    display: inline-flex;
+  }
+
+  &__header {
+    margin-bottom: 20px;
+    align-items: center;
+  }
+
+  &__title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: $color-darkest;
+
+  }
+
+  &__link {
+    margin-left: 20px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.4;
+    color: $color-dark;
+  }
+
+}
+
+.c-total-price {
+  background: $color-lighten;
+  border: 1px solid $color-lighten;
+  border-radius: 6px;
+  padding: 40px 30px;
+  height: 100%;
+
+  &__item + &__item {
+    margin-top: 30px;
+  }
+
+  &__position {
+    font-size: 18px;
+    line-height: 1.2;
+    color: $color-darken;
+
+  }
+
+  &__price {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    color: $color-darkest;
+  }
+}
+
+.c-added-basket-section{
+  &__main{
+    margin-bottom: 56px;
+  }
+  &__footer{
+    margin-top: 20px;
+  }
+  &__related-title{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    text-transform: uppercase;
+    color: $color-darken;
+    margin-bottom: 24px;
   }
 }
