--- a/dev/templates/search-result.html
+++ b/dev/templates/search-result.html
@@ -161,8 +161,8 @@
                 </ul>
             </div>
             <div class="col-10">
-                <div class="c-product-list c-product-list_lg c-product-list_fixed-item">
-                    <div class="c-product-list__item">
+                <div class="c-product-list c-product-list_lg c-product-list_fixed-item row">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -232,7 +232,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -302,7 +302,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -372,7 +372,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -442,7 +442,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
@@ -512,7 +512,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-product-list__item">
+                    <div class="c-product-list__item col-auto">
                         <div class="c-product-card c-product-card_md c-product-card_events">
                             <div class="c-product-card__actions c-icon-list">
                                 <div class="c-icon-list__item">
