--- a/dev/templates/news-detail.html
+++ b/dev/templates/news-detail.html
@@ -141,55 +141,76 @@
 <div class="container">
     <h1 class="c-title c-title_lg c-title_main">Название новости, может быть в несколько строк</h1>
     <div class="c-content c-content_default">
-        <p>Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта:
-            постоянный количественный рост и сфера нашей активности предопределяет высокую востребованность дальнейших
-            направлений развития. Предварительные выводы неутешительны: повышение уровня гражданского сознания
-            способствует повышению качества благоприятных перспектив. Лишь активно развивающиеся страны третьего мира,
-            которые представляют собой яркий пример континентально-европейского типа политической культуры, будут в
-            равной степени предоставлены сами себе. Наше дело не так однозначно, как может показаться: начало
-            повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в
-            формировании форм воздействия. Задача организации, в особенности же понимание сути ресурсосберегающих
-            технологий требует определения и уточнения существующих финансовых и административных условий. Учитывая
-            ключевые сценарии поведения, постоянное информационно-пропагандистское обеспечение нашей деятельности не
-            оставляет шанса для стандартных подходов.</p>
-        <br>
-        <img alt="" src="images/news-detail.jpg">
-        <br><br>
-        <p>
-            В частности, курс на социально-ориентированный национальный проект говорит о возможностях позиций,
-            занимаемых участниками в отношении поставленных задач. Равным образом, начало повседневной работы по
-            формированию позиции представляет собой интересный эксперимент проверки системы обучения кадров,
-            соответствующей насущным потребностям! Вот вам яркий пример современных тенденций — высокотехнологичная
-            концепция общественного уклада является качественно новой ступенью благоприятных перспектив. Также как
-            перспективное планирование не даёт нам иного выбора, кроме определения новых предложений. В своём стремлении
-            повысить качество жизни, они забывают, что высокое качество позиционных исследований не даёт нам иного
-            выбора, кроме определения дальнейших направлений развития.
-            <br><br>
-            Приятно, граждане, наблюдать, как непосредственные участники технического прогресса преданы
-            социально-демократической анафеме. Задача организации, в особенности же консультация с широким активом в
-            значительной степени обусловливает важность дальнейших направлений развития. Являясь всего лишь частью общей
-            картины, непосредственные участники технического прогресса рассмотрены исключительно в разрезе маркетинговых
-            и финансовых предпосылок. Разнообразный и богатый опыт говорит нам, что повышение уровня гражданского
-            сознания не оставляет шанса для как самодостаточных, так и внешне зависимых концептуальных решений. Мы
-            вынуждены отталкиваться от того, что выбранный нами инновационный путь создаёт необходимость включения в
-            производственный план целого ряда внеочередных мероприятий с учётом комплекса новых предложений.
-            Повседневная практика показывает, что высокотехнологичная концепция общественного уклада однозначно
-            определяет каждого участника как способного принимать собственные решения касаемо кластеризации усилий.
-            <br><br>
-            Кстати, некоторые особенности внутренней политики объявлены нарушающими общечеловеческие нормы этики и
-            морали. Кстати, стремящиеся вытеснить традиционное производство, нанотехнологии указаны как претенденты на
-            роль ключевых факторов. А ещё активно развивающиеся страны третьего мира указаны как претенденты на роль
-            ключевых факторов. Таким образом, сплочённость команды профессионалов, а также свежий взгляд на привычные
-            вещи — безусловно открывает новые горизонты для инновационных методов управления процессами.
-            <br><br>
-            Как уже неоднократно упомянуто, независимые государства формируют глобальную экономическую сеть и при этом —
-            объявлены нарушающими общечеловеческие нормы этики и морали. Но сплочённость команды профессионалов
-            позволяет оценить значение системы обучения кадров, соответствующей насущным потребностям. Значимость этих
-            проблем настолько очевидна, что сплочённость команды профессионалов в значительной степени обусловливает
-            важность прогресса профессионального сообщества.
-        </p>
-        <div class="d-flex justify-content-center mt-4">
-            <a href="#" class="c-btn c-btn_md c-btn_style-ghost c-btn_color-primary w-auto">К списку новостей</a>
+        <div class="news-detail">
+            <div class="news-detail_preview">
+                <p>Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого
+                    факта:
+                    постоянный количественный рост и сфера нашей активности предопределяет высокую востребованность
+                    дальнейших
+                    направлений развития. Предварительные выводы неутешительны: повышение уровня гражданского сознания
+                    способствует повышению качества благоприятных перспектив. Лишь активно развивающиеся страны третьего
+                    мира,
+                    которые представляют собой яркий пример континентально-европейского типа политической культуры,
+                    будут в
+                    равной степени предоставлены сами себе. Наше дело не так однозначно, как может показаться: начало
+                    повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в
+                    формировании форм воздействия. Задача организации, в особенности же понимание сути
+                    ресурсосберегающих
+                    технологий требует определения и уточнения существующих финансовых и административных условий.
+                    Учитывая
+                    ключевые сценарии поведения, постоянное информационно-пропагандистское обеспечение нашей
+                    деятельности не
+                    оставляет шанса для стандартных подходов.</p>
+            </div>
+            <div class="row mb-3 mt-3">
+                <div class="col-12 col-sm-10 col-md-9 col-xl-6">
+                    <img alt="" src="images/news-detail.jpg">
+                </div>
+            </div>
+            <p>
+                В частности, курс на социально-ориентированный национальный проект говорит о возможностях позиций,
+                занимаемых участниками в отношении поставленных задач. Равным образом, начало повседневной работы по
+                формированию позиции представляет собой интересный эксперимент проверки системы обучения кадров,
+                соответствующей насущным потребностям! Вот вам яркий пример современных тенденций — высокотехнологичная
+                концепция общественного уклада является качественно новой ступенью благоприятных перспектив. Также как
+                перспективное планирование не даёт нам иного выбора, кроме определения новых предложений. В своём
+                стремлении
+                повысить качество жизни, они забывают, что высокое качество позиционных исследований не даёт нам иного
+                выбора, кроме определения дальнейших направлений развития.
+                <br><br>
+                Приятно, граждане, наблюдать, как непосредственные участники технического прогресса преданы
+                социально-демократической анафеме. Задача организации, в особенности же консультация с широким активом в
+                значительной степени обусловливает важность дальнейших направлений развития. Являясь всего лишь частью
+                общей
+                картины, непосредственные участники технического прогресса рассмотрены исключительно в разрезе
+                маркетинговых
+                и финансовых предпосылок. Разнообразный и богатый опыт говорит нам, что повышение уровня гражданского
+                сознания не оставляет шанса для как самодостаточных, так и внешне зависимых концептуальных решений. Мы
+                вынуждены отталкиваться от того, что выбранный нами инновационный путь создаёт необходимость включения в
+                производственный план целого ряда внеочередных мероприятий с учётом комплекса новых предложений.
+                Повседневная практика показывает, что высокотехнологичная концепция общественного уклада однозначно
+                определяет каждого участника как способного принимать собственные решения касаемо кластеризации усилий.
+                <br><br>
+                Кстати, некоторые особенности внутренней политики объявлены нарушающими общечеловеческие нормы этики и
+                морали. Кстати, стремящиеся вытеснить традиционное производство, нанотехнологии указаны как претенденты
+                на
+                роль ключевых факторов. А ещё активно развивающиеся страны третьего мира указаны как претенденты на роль
+                ключевых факторов. Таким образом, сплочённость команды профессионалов, а также свежий взгляд на
+                привычные
+                вещи — безусловно открывает новые горизонты для инновационных методов управления процессами.
+                <br><br>
+                Как уже неоднократно упомянуто, независимые государства формируют глобальную экономическую сеть и при
+                этом —
+                объявлены нарушающими общечеловеческие нормы этики и морали. Но сплочённость команды профессионалов
+                позволяет оценить значение системы обучения кадров, соответствующей насущным потребностям. Значимость
+                этих
+                проблем настолько очевидна, что сплочённость команды профессионалов в значительной степени обусловливает
+                важность прогресса профессионального сообщества.
+            </p>
+            <div class="d-flex justify-content-center mt-4">
+                <a class="c-btn c-btn_sm c-btn_style-underline c-btn_color-primary c-btn_color-primary w-auto" href="#">К
+                    списку новостей</a>
+            </div>
         </div>
     </div>
 </div>
@@ -247,7 +268,8 @@
                         <ul class="bottom-menu__list">
                             <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link"
                                                                href="#">Пользователям</a></li>
-                            <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link" href="#">Гарантия</a>
+                            <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link"
+                                                               href="#">Гарантия</a>
                             </li>
                             <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link" href="#">Техническая
                                 поддержка</a></li>
@@ -265,11 +287,13 @@
                     </div>
                     <div class="c-bottom-menu__group col-auto col-3">
                         <ul class="bottom-menu__list">
-                            <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link" href="#">Партнерам</a>
+                            <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link"
+                                                               href="#">Партнерам</a>
                             </li>
                             <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link" href="#">Защита в
                                 проекте</a></li>
-                            <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link" href="#">Обучение и
+                            <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link" href="#">Обучение
+                                и
                                 сертификация</a></li>
                             <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link"
                                                                href="#">Авторизация</a></li>
@@ -283,11 +307,14 @@
                     </div>
                     <div class="c-bottom-menu__group col-auto col-3">
                         <ul class="bottom-menu__list">
-                            <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link" href="#">Компания</a>
+                            <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link"
+                                                               href="#">Компания</a>
                             </li>
-                            <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link" href="#">Новости</a>
+                            <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link"
+                                                               href="#">Новости</a>
                             </li>
-                            <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link" href="#">О компнии</a>
+                            <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link" href="#">О
+                                компнии</a>
                             </li>
                             <li class="c-bottom-menu__item"><a class="c-bottom-menu__link c-link" href="#">Инженерно-технический
                                 центр</a></li>
