--- a/dev/templates/selection-tile.html
+++ b/dev/templates/selection-tile.html
@@ -155,8 +155,8 @@
                 </select>
             </div>
             <div class="col-5 d-flex justify-content-end">
-                <div class="c-view-list">
-                    <div class="c-view-list__item">
+                <div class="c-view-list row">
+                    <div class="c-view-list__item col-auto">
                         <button class="c-view-btn" title="список" type="button">
                             <svg fill="none" height="24" viewBox="0 0 24 24" width="24"
                                  xmlns="http://www.w3.org/2000/svg">
@@ -169,8 +169,8 @@
                             </svg>
                         </button>
                     </div>
-                    <div class="c-view-list__item">
-                        <button class="c-view-btn с-view-btn_active" title="плитка" type="button">
+                    <div class="c-view-list__item col-auto">
+                        <button class="c-view-btn c-view-btn_active" title="плитка" type="button">
                             <svg fill="none" height="24" viewBox="0 0 24 24" width="24"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <rect height="6" width="6"/>
