--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -39,19 +39,32 @@
   }
 }
 
-.c-btn_style-ghost {
+.c-btn_style-underline {
   background-color: transparent;
-  border-bottom: 1px solid;
+  border-bottom: 2px solid;
 
+  &.c-btn_sm, &.c-btn_md, &.c-btn_lg {
+    border-radius: 0;
+  }
 }
-
-.c-btn_style-ghost.c-btn_color-primary {
-  color:$color-dark;
+.c-btn_style-underline.c-btn_active.c-btn_color-primary{
+  color: $color-primary;
+  border-color: $color-primary;
+}
+.c-btn_style-underline.c-btn_sm {
+  height: 38px;
+  font-size: 16px;
+  line-height: 19px;
+  padding-left: 0;
+  padding-right: 0;
+}
+.c-btn_style-underline.c-btn_color-primary {
+  color: $color-dark;
   border-color: $color-secondary;
-  &:hover,&:focus{
+
+  &:hover, &:focus,  {
     color: $color-primary;
     border-color: $color-primary;
-
   }
 }
 
@@ -73,6 +86,7 @@
   background-color: $color-lightest;
   color: $color-dark;
   border: 1px solid #F2F2F2;
+
   &:hover, &:focus {
     background-color: $color-dark;
     color: $color-lightest;
