--- a/dev/scss/layout/_main.scss
+++ b/dev/scss/layout/_main.scss
@@ -306,6 +306,7 @@ body {
     }
   }
 
+
   &_lg {
     display: flex;
     border-radius: 18px;
@@ -343,11 +344,19 @@ body {
         flex-basis: 136px;
       }
     }
+
     &.c-product-card_card-added {
       .c-product-card__body {
         padding-right: 0;
         display: flex;
         align-items: center;
+      }
+    }
+
+    &.c-product-card_request-price{
+      .c-product-card__controls {
+        width: auto;
+        max-width: 100%;
       }
     }
 
@@ -423,6 +432,11 @@ body {
     flex-shrink: 0;
     margin-right: 10px;
   }
+  &_counter-lg{
+    .c-product-controls__counter{
+      width: 140px;
+    }
+  }
 
   &__basket {
     flex-grow: 1;
@@ -450,11 +464,11 @@ body {
   //flex-wrap: wrap;
   //margin-right: -10px;
   //margin-left: -10px;
-&_bordered{
-  .c-product-list__item + .c-product-list__item {
-    border-top: 1px solid $color-lighten;
+  &_bordered {
+    .c-product-list__item + .c-product-list__item {
+      border-top: 1px solid $color-lighten;
+    }
   }
-}
 
 
   &__item {
@@ -525,26 +539,26 @@ body {
 
 .c-view-btn {
   background-color: transparent;
+  padding: 0;
 
-  rect {
+  svg {
     fill: $color-primary;
   }
 
   &:hover, &:focus, &_active {
-    rect {
+    svg {
       fill: $color-secondary;
     }
   }
 }
 
 .c-view-list {
-  display: flex;
-  margin-left: -30px;
-  margin-right: -30px;
+  margin-left: -15px;
+  margin-right: -15px;
 
   &__item {
-    padding-left: 30px;
-    padding-right: -30px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
@@ -897,61 +911,51 @@ body {
 }
 
 .c-news-list {
+  margin-bottom: -30px;
+
   &__item {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    margin-bottom: 30px;
   }
 }
 
 
-.c-lk-list {
+.c-personal-list {
   &__item + &__item {
     margin-top: 30px;
   }
 }
 
-.c-tabs {
+.c-tabs-list {
   display: flex;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 
+  &__item {
+    margin-bottom: 20px;
+  }
+
+  &_news-list {
+    margin-bottom: 20px;
+  }
+
+}
+
+.c-tabs-link {
   &_ghost {
-    .c-tabs__link {
-      display: block;
-      text-decoration: none;
-      border-bottom: 2px solid $color-dark;
-      text-transform: uppercase;
-      padding-bottom: 14px;
-      font-size: 20px;
-      line-height: 24px;
-
-    }
-
-    .c-tabs__link + .c-tabs__link {
-      padding-left: 25px;
-    }
-
-    .c-tabs__link:hover, .c-tabs__link:focus, .c-tabs__link-active {
-      color: $color-primary;
-      border-color: $color-primary;
-    }
-
+    text-transform: uppercase;
+    padding-bottom: 14px;
+    font-size: 20px;
+    line-height: 24px;
   }
 
   &_default {
-    .c-tabs__link {
-      width: auto;
-      text-decoration: none;
-      padding: 14px 20px;
-      background-color: $color-lightest;
-      border: 1px solid #F2F2F2;
-      color: $color-dark;
-    }
+    width: auto;
+    text-decoration: none;
+    padding: 14px 20px;
+    background-color: $color-lightest;
+    border: 1px solid #F2F2F2;
+    color: $color-dark;
 
-    .c-tabs__link + .c-tabs__link {
-      margin-left: 20px;
-    }
-
-    .c-tabs__link:hover, .c-tabs__link:focus, .c-tabs__link-active {
+    &:hover, &:focus, &.c-tabs-link_active {
       background-color: $color-primary;
       color: $color-lightest;
       border-color: transparent;
@@ -959,7 +963,6 @@ body {
 
   }
 }
-
 
 .c-specifications-section {
   padding: 30px;
@@ -1030,14 +1033,16 @@ body {
   }
 }
 
-.c-added-basket-section{
-  &__main{
+.c-added-basket-section {
+  &__main {
     margin-bottom: 56px;
   }
-  &__footer{
+
+  &__footer {
     margin-top: 20px;
   }
-  &__related-title{
+
+  &__related-title {
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
@@ -1046,4 +1051,13 @@ body {
     color: $color-darken;
     margin-bottom: 24px;
   }
+}
+
+.c-modal{
+  background-color: $color-lightest;
+  width: 100%;
+  margin: auto;
+  max-width: 1514px;
+  padding: 50px 30px;
+  border-radius: 10px;
 }
