--- a/dev/templates/price-request.html
+++ b/dev/templates/price-request.html
@@ -13,79 +13,87 @@
 <body>
 <div class="c-content c-content_form-page">
     <div class="container">
-        <form action="#" class="c-form">
-            <div class="c-form__header">
-                <h2 class="c-form__title">
-                    Узнать цену
-                </h2>
-                <div class="align-items-center c-product-card_left-control c-product-card_card-added  c-product-card c-product-card_bordered c-product-card_lg ">
-                    <div class="c-checkbox-primary">
-                        <input class="c-checkbox c-checkbox_primary" id="example-checkbox" type="checkbox">
-                        <label class="c-label mb-0" for="example-checkbox"></label>
-                    </div>
-                    <a class="c-product-card__preview" href="#">
-                        <img alt="" src="images/cupboard.png">
-                    </a>
-                    <div class="c-product-card__body">
-                        <div class="c-product-card__description">
-                            <div class="c-product-desc">
-                                <a class="c-product-desc__text c-product-desc__item" href="#"> 19" Напольный серверный
-                                    шкаф NTSS ПРОЦОД МАСТЕР 47U 800х1200 мм сварной в сборе, двери передняя
-                                    перфорированная, задние двойные перфорированные, боковые стенки, регулируемые опоры,
-                                    ролики, RAL 9005 </a>
-                                <div class="c-product-desc__articul c-product-desc__item"> 343423426524345</div>
-                            </div>
+
+        <div class="c-modal mfp-hide" id="popup-form">
+            <form action="#" class="c-form">
+                <div class="c-form__header">
+                    <h2 class="c-form__title">
+                        Узнать цену
+                    </h2>
+                    <div class="align-items-center c-product-card_left-control c-product-card_card-added c-product-card_request-price c-product-card c-product-card_bordered c-product-card_lg ">
+                        <div class="c-checkbox-primary">
+                            <input class="c-checkbox c-checkbox_primary" id="example-checkbox" type="checkbox">
+                            <label class="c-label mb-0" for="example-checkbox"></label>
                         </div>
-                        <div class="c-product-card__controls">
-                            <div class="c-product-controls">
-                                <div class="c-product-controls__body">
-                                    <div class="c-product-controls__counter c-input-counter">
-                                        <input class="c-input-counter__input c-input c-input_md c-input_style-secondary c-input_color-primary"
-                                               type="text" value="1">
-                                        <button class="c-input-counter__left-ctrl" type="button">-</button>
-                                        <button class="c-input-counter__right-ctrl" type="button">+</button>
+                        <a class="c-product-card__preview" href="#">
+                            <img alt="" src="images/cupboard.png">
+                        </a>
+                        <div class="c-product-card__body">
+                            <div class="c-product-card__description">
+                                <div class="c-product-desc">
+                                    <a class="c-product-desc__text c-product-desc__item" href="#">19" Напольный серверный
+                                        шкаф NTSS ПРОЦОД МАСТЕР 47U 800х1200 мм сварной в сборе, двери передняя
+                                        перфорированная, задние двойные перфорированные, боковые стенки, регулируемые опоры,
+                                        ролики, RAL 9005</a>
+                                    <div class="c-product-desc__articul c-product-desc__item"> 343423426524345</div>
+                                </div>
+                            </div>
+                            <div class="c-product-card__controls">
+                                <div class="c-product-controls c-product-controls_counter-lg">
+                                    <div class="c-product-controls__body">
+                                        <div class="c-product-controls__counter c-input-counter">
+                                            <input class="c-input-counter__input c-input c-input_md c-input_style-secondary c-input_color-primary"
+                                                   type="text" value="1">
+                                            <button class="c-input-counter__left-ctrl" type="button">-</button>
+                                            <button class="c-input-counter__right-ctrl" type="button">+</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="c-form__body">
-                <div class="c-form__fields">
-                    <div class="c-form__field c-input-wrap c-input-wrap_lg c-input-wrap_anim-label">
-                        <input class="w-100 c-input-wrap__input c-input c-input_style-default c-input_lg c-input_color-primary"
-                               id="name"
-                               type="text">
-                        <label class="c-input-wrap__label" for="name"> Ваше имя</label>
+                <div class="c-form__body">
+                    <div class="mb-3 w-100 text-center">
+                        Оставьте свои контактные данные и наш менеджер свяжется с Вами в ближайшее время
                     </div>
-                    <div class="c-form__field c-input-wrap c-input-wrap_lg c-input-wrap_anim-label">
-                        <input class="w-100 c-input-wrap__input c-input c-input_style-default c-input_lg c-input_color-primary"
-                               id="phone" required type="tel">
-                        <label class="c-input-wrap__label" for="phone"> Телефон <span
-                                class="u-text-red">*</span></label>
-                    </div>
-                    <div class="c-form__field c-input-wrap c-input-wrap_lg c-input-wrap_anim-label">
-                        <input class="w-100 c-input-wrap__input c-input c-input_style-default c-input_lg c-input_color-primary"
-                               id="email" type="email">
-                        <label class="c-input-wrap__label" for="email"> E-mail</label>
-                    </div>
-                    <div class="c-form__field c-input-wrap c-input-wrap_lg c-input-wrap_anim-label">
-                        <div class="c-checkbox-primary">
-                            <input class="c-checkbox c-checkbox_primary" id="example-checkbox" required type="checkbox">
-                            <label class="c-label" for="example-checkbox">Я соглашаюсь на обработку персональных
-                                данных</label>
+                    <div class="c-form__fields">
+                        <div class="c-form__field c-input-wrap c-input-wrap_lg c-input-wrap_anim-label">
+                            <input class="w-100 c-input-wrap__input c-input c-input_style-default c-input_lg c-input_color-primary"
+                                   id="name"
+                                   type="text">
+                            <label class="c-input-wrap__label" for="name"> Ваше имя</label>
+                        </div>
+                        <div class="c-form__field c-input-wrap c-input-wrap_lg c-input-wrap_anim-label">
+                            <input class="w-100 c-input-wrap__input c-input c-input_style-default c-input_lg c-input_color-primary"
+                                   id="phone" required type="tel">
+                            <label class="c-input-wrap__label" for="phone"> Телефон <span
+                                    class="u-text-red">*</span></label>
+                        </div>
+                        <div class="c-form__field c-input-wrap c-input-wrap_lg c-input-wrap_anim-label">
+                            <input class="w-100 c-input-wrap__input c-input c-input_style-default c-input_lg c-input_color-primary"
+                                   id="email" type="email">
+                            <label class="c-input-wrap__label" for="email"> E-mail</label>
+                        </div>
+                        <div class="c-form__field c-input-wrap c-input-wrap_lg c-input-wrap_anim-label">
+                            <div class="c-checkbox-primary c-checkbox-primary_default">
+                                <input class="c-checkbox c-checkbox_primary" id="example-checkbox" required type="checkbox">
+                                <label class="c-label" for="example-checkbox">Я соглашаюсь на обработку персональных
+                                    данных</label>
+                            </div>
                         </div>
                     </div>
+                    <div class="c-form__controls">
+                        <button class="c-form__control c-btn c-btn_style-default c-btn_color-primary c-btn_lg"
+                                type="submit">
+                            Узнать цену
+                        </button>
+                    </div>
                 </div>
-                <div class="c-form__controls">
-                    <button class="c-form__control c-btn c-btn_style-default c-btn_color-primary c-btn_lg"
-                            type="submit">
-                        Узнать цену
-                    </button>
-                </div>
-            </div>
-        </form>
+            </form>
+        </div>
+        <a  href="#popup-form" class="c-product__img c-popup">POPUP</a>
+
     </div>
 </div>
 </body>
