--- a/dev/scss/layout/_main.scss
+++ b/dev/scss/layout/_main.scss
@@ -1060,4 +1060,10 @@ body {
   max-width: 1514px;
   padding: 50px 30px;
   border-radius: 10px;
+  position: relative;
+}
+
+.mfp-close.modal-close{
+  top: 64px;
+  right: 50px;
 }
