--- a/dev/templates/add-item-in-cart.html
+++ b/dev/templates/add-item-in-cart.html
@@ -15,6 +15,11 @@
 <body>
 <div class="container">
     <div class="c-modal mfp-hide" id="popup-form">
+        <button class="mfp-close modal-close">
+            <svg fill="none" height="30" width="30" xmlns="http://www.w3.org/2000/svg">
+                <use xlink:href="images/svg.svg#modal-close" xmlns="http://www.w3.org/1999/xlink"></use>
+            </svg>
+        </button>
         <div class="c-added-basket-section">
             <div class="c-added-basket-section__main">
                 <div class="c-added-basket-section__main-title"><h2 class="c-title c-title_lg c-title_main text-center">
