--- a/dev/templates/price-request.html
+++ b/dev/templates/price-request.html
@@ -15,9 +15,14 @@
     <div class="container">
 
         <div class="c-modal mfp-hide" id="popup-form">
+            <button class="mfp-close modal-close">
+                <svg fill="none" height="30" width="30" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="images/svg.svg#modal-close" xmlns="http://www.w3.org/1999/xlink"></use>
+                </svg>
+            </button>
             <form action="#" class="c-form">
                 <div class="c-form__header">
-                    <h2 class="c-form__title">
+                    <h2 class="c-form__title mb-3">
                         Узнать цену
                     </h2>
                     <div class="align-items-center c-product-card_left-control c-product-card_card-added c-product-card_request-price c-product-card c-product-card_bordered c-product-card_lg ">
@@ -31,9 +36,11 @@
                         <div class="c-product-card__body">
                             <div class="c-product-card__description">
                                 <div class="c-product-desc">
-                                    <a class="c-product-desc__text c-product-desc__item" href="#">19" Напольный серверный
+                                    <a class="c-product-desc__text c-product-desc__item" href="#">19" Напольный
+                                        серверный
                                         шкаф NTSS ПРОЦОД МАСТЕР 47U 800х1200 мм сварной в сборе, двери передняя
-                                        перфорированная, задние двойные перфорированные, боковые стенки, регулируемые опоры,
+                                        перфорированная, задние двойные перфорированные, боковые стенки, регулируемые
+                                        опоры,
                                         ролики, RAL 9005</a>
                                     <div class="c-product-desc__articul c-product-desc__item"> 343423426524345</div>
                                 </div>
@@ -77,7 +84,8 @@
                         </div>
                         <div class="c-form__field c-input-wrap c-input-wrap_lg c-input-wrap_anim-label">
                             <div class="c-checkbox-primary c-checkbox-primary_default">
-                                <input class="c-checkbox c-checkbox_primary" id="example-checkbox" required type="checkbox">
+                                <input class="c-checkbox c-checkbox_primary" id="example-checkbox" required
+                                       type="checkbox">
                                 <label class="c-label" for="example-checkbox">Я соглашаюсь на обработку персональных
                                     данных</label>
                             </div>
@@ -92,7 +100,8 @@
                 </div>
             </form>
         </div>
-        <a  href="#popup-form" class="c-product__img c-popup">POPUP</a>
+
+        <a class="c-product__img c-popup" href="#popup-form">POPUP</a>
 
     </div>
 </div>
